created about-us and blog sections

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,193 @@
       </div>
     </aside>
 
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            class="about-us"
+            id="about-us"
+          >
+            <h1 class="about-us__name">What we bake</h1>
+            <p class="about-us__subtitle">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+
+            <div class="about-us__cards">
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/oatmeal-cookies.png"
+                  alt="oatmeal-cookies"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Cakes</h3>
+                <p class="about-us__info">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/chocolate-biscuit.png"
+                  alt="chocolate-biscuit"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Cakes</h3>
+                <p class="about-us__info">
+                  Chocolate biscuit coffee cake topped with a buttercream and
+                  powder
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/croissant-with-cinammon.png"
+                  alt="croissant-with-cinammon"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Donuts</h3>
+                <p class="about-us__info">
+                  Light multi-layered croissant strewn with cinammon and almond
+                  “petals”
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/croissant-with-coconut.png"
+                  alt="croissant-with-coconut"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Donuts</h3>
+                <p class="about-us__info">
+                  Light multi-layered croissant strewn with coconut and nuts
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/chocolate-salted-caramel.png"
+                  alt="metallic"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Cakes</h3>
+                <p class="about-us__info">
+                  Chocolate salted caramel, Vanilla frutti pebbles
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+
+              <article class="about-us__card">
+                <img
+                  src="images/about-us/cookies-with-golden-raisins.png"
+                  alt="cookies-with-golden-raisins"
+                  class="about-us__photo"
+                />
+                <h3 class="about-us__title">Cookies</h3>
+                <p class="about-us__info">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+                <div class="about-us__button">
+                  <div class="about-us__icon"></div>
+                  <a
+                    href="#"
+                    class="about-us__link"
+                  >
+                    Order
+                  </a>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section
+            class="blog"
+            id="blog"
+          >
+            <div class="blog__description">
+              <h1 class="blog__name">Few words About us</h1>
+              <p class="blog__info">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+            </div>
+            <div class="blog__cards">
+              <article class="blog__card">
+                <h3 class="blog__count">2015</h3>
+                <p class="blog__subtitle">Foundation year</p>
+              </article>
+
+              <article class="blog__card">
+                <h3 class="blog__count">23</h3>
+                <p class="blog__subtitle">Stores</p>
+              </article>
+
+              <article class="blog__card">
+                <h3 class="blog__count">155</h3>
+                <p class="blog__subtitle">Companies</p>
+              </article>
+
+              <article class="blog__card">
+                <h3 class="blog__count">10k+</h3>
+                <p class="blog__subtitle">Clients</p>
+              </article>
+              <!-- </div> -->
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
