--- a/src/index.html
+++ b/src/index.html
@@ -333,12 +333,143 @@
                 <h3 class="blog__count">10k+</h3>
                 <p class="blog__subtitle">Clients</p>
               </article>
-              <!-- </div> -->
             </div>
           </section>
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__menus">
+            <div class="footer__menu">
+              <a
+                href="#"
+                class="footer__logo"
+              >
+                <img
+                  src="images/logo-white.png"
+                  alt="Bakery logo"
+                />
+              </a>
+              <ul class="footer__list footer__list--menu">
+                <li class="footer__item">
+                  <a
+                    href="#"
+                    class="footer__link footer__link--name"
+                  >
+                    Menu
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#"
+                    class="footer__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#about-us"
+                    class="footer__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#blog"
+                    class="footer__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#"
+                    class="footer__link"
+                  >
+                    Terms & Privacy
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__contact">
+              <h2 class="footer__title">
+                Contact
+                <br />
+                us
+              </h2>
+              <div class="footer__contact-info">
+                <ul class="footer__list footer__list--call">
+                  <li class="footer__item">
+                    <a
+                      href="#"
+                      class="footer__link footer__link--name"
+                    >
+                      Call us
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="tel:(629) 555-0129"
+                      class="footer__link"
+                    >
+                      (629) 555-0129
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="tel:(603) 555-0123"
+                      class="footer__link"
+                    >
+                      (603) 555-0123
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="tel:(704) 555-0127"
+                      class="footer__link"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </li>
+                </ul>
+
+                <ul class="footer__list footer__list--email">
+                  <li class="footer__item">
+                    <a
+                      href="#"
+                      class="footer__link footer__link--name"
+                    >
+                      Email us
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="mailto:bakerlab@example.com"
+                      class="footer__link"
+                    >
+                      bakerlab@example.com
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__socials">
+              <div class="footer__social footer__social--facebook"></div>
+              <div class="footer__social footer__social--instagram"></div>
+              <div class="footer__social footer__social--twitter"></div>
+            </div>
+            <p class="footer__notice">© Bakerlab 2022</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
