fixed some issues and added animation

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -19,6 +19,27 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../src/images/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../src/images/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../src/images/favicon_io/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="../src/images/favicon_io/site.webmanifest"
     />
     <link
       rel="stylesheet"
@@ -461,9 +482,15 @@
           </div>
           <div class="footer__info">
             <div class="footer__socials">
-              <div class="footer__social footer__social--facebook"></div>
-              <div class="footer__social footer__social--instagram"></div>
-              <div class="footer__social footer__social--twitter"></div>
+              <a href="https://www.facebook.com/">
+                <div class="footer__social footer__social--facebook"></div>
+              </a>
+              <a href="https://www.instagram.com/">
+                <div class="footer__social footer__social--instagram"></div>
+              </a>
+              <a href="https://x.com/">
+                <div class="footer__social footer__social--twitter"></div>
+              </a>
             </div>
             <p class="footer__notice">© Bakerlab 2022</p>
           </div>
