added animation for all elements

--- a/src/index.html
+++ b/src/index.html
@@ -62,25 +62,25 @@
             </a>
             <div class="top-bar__navs">
               <a
-                href="#"
+                href="#about-us"
                 class="top-bar__nav"
               >
                 Products
               </a>
               <a
-                href="#"
+                href="#about-us"
                 class="top-bar__nav"
               >
                 About Us
               </a>
               <a
-                href="#"
+                href="#blog"
                 class="top-bar__nav"
               >
                 Blog
               </a>
               <a
-                href="#"
+                href="tel:(629) 555-0129"
                 class="top-bar__nav"
               >
                 <div class="top-bar__icon"></div>
@@ -100,7 +100,7 @@
             <div class="header__button">
               <div class="header__icon"></div>
               <a
-                href="#"
+                href="#about-us"
                 class="header__link"
               >
                 Learn more
@@ -139,7 +139,7 @@
               <li class="nav__item">
                 <a
                   class="nav__link"
-                  href="#"
+                  href="#about-us"
                 >
                   Products
                 </a>
@@ -201,7 +201,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -223,7 +223,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -245,7 +245,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -266,7 +266,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -287,7 +287,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -309,7 +309,7 @@
                 <div class="about-us__button">
                   <div class="about-us__icon"></div>
                   <a
-                    href="#"
+                    href="#contact"
                     class="about-us__link"
                   >
                     Order
@@ -385,7 +385,7 @@
                 </li>
                 <li class="footer__item">
                   <a
-                    href="#"
+                    href="#about-us"
                     class="footer__link"
                   >
                     Products
@@ -417,7 +417,10 @@
                 </li>
               </ul>
             </div>
-            <div class="footer__contact">
+            <div
+              class="footer__contact"
+              id="contact"
+            >
               <h2 class="footer__title">
                 Contact
                 <br />
@@ -482,13 +485,25 @@
           </div>
           <div class="footer__info">
             <div class="footer__socials">
-              <a href="https://www.facebook.com/">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="footer__social footer__social--facebook"></div>
               </a>
-              <a href="https://www.instagram.com/">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="footer__social footer__social--instagram"></div>
               </a>
-              <a href="https://x.com/">
+              <a
+                href="https://x.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="footer__social footer__social--twitter"></div>
               </a>
             </div>
