problem with start

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,62 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      href="./images/icons/cookie.png"
+      type="image/png"
+    />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a href="#" class="top-bar__logo-link">
+              <img src="./images/logo.png" alt="Bakerlab logo"
+                class="top-bar__logo">
+            </a>
+
+            <div class="top-bar__menu">
+              <a href="#" class="menu menu--products">Products</a>
+              <a href="#" class="menu menu--about">About us</a>
+              <a href="#" class="menu menu--blog">Blog</a>
+              <a href="#" class="menu menu--contact">
+                <img src="./images/icons/Icon-phone.png" alt="phone icon" class="menu--contactIcon">
+                Contact us
+              </a>
+            </div>
+          </div>
+          <div class="header__bottom">
+            <div class="header__text">
+              We bake your fantasies — croissants,<br>cakes, cookies, and cupcakes.
+            </div>
+            <div class="header__title">
+              Creative bakery
+            </div>
+            <button class="header__button">
+              <img src="./images/icons/Icon-cookie.png" alt="icon cookie">
+              Learn more
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="products" id="products"></section>
+          <section class="about" id="about"></section>
+          <section class="blog" id="blog"></section>
+        </div>
+      </div>
+    </main>
     <script src="scripts/main.js"></script>
   </body>
 </html>
