divided the main file into blocks

--- a/src/index.html
+++ b/src/index.html
@@ -376,12 +376,7 @@
               </a>
               <ul class="footer__list footer__list--menu">
                 <li class="footer__item">
-                  <a
-                    href="#"
-                    class="footer__link footer__link--name"
-                  >
-                    Menu
-                  </a>
+                  <p class="footer__link footer__link--name">Menu</p>
                 </li>
                 <li class="footer__item">
                   <a
@@ -429,12 +424,7 @@
               <div class="footer__contact-info">
                 <ul class="footer__list footer__list--call">
                   <li class="footer__item">
-                    <a
-                      href="#"
-                      class="footer__link footer__link--name"
-                    >
-                      Call us
-                    </a>
+                    <p class="footer__link footer__link--name">Call us</p>
                   </li>
                   <li class="footer__item">
                     <a
@@ -464,12 +454,7 @@
 
                 <ul class="footer__list footer__list--email">
                   <li class="footer__item">
-                    <a
-                      href="#"
-                      class="footer__link footer__link--name"
-                    >
-                      Email us
-                    </a>
+                    <p class="footer__link footer__link--name">Email us</p>
                   </li>
                   <li class="footer__item">
                     <a
