problem with grid

--- a/src/index.html
+++ b/src/index.html
@@ -19,49 +19,333 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header__content">
-          <div class="top-bar">
-            <a href="#" class="top-bar__logo-link">
-              <img src="./images/logo.png" alt="Bakerlab logo"
-                class="top-bar__logo">
-            </a>
+      <!-- <div class="container"> -->
+      <div class="header__content">
+        <div class="top-bar">
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="./images/logo.png"
+              alt="Bakerlab logo"
+              class="top-bar__logo"
+            />
+          </a>
 
-            <div class="top-bar__menu">
-              <a href="#" class="menu menu--products">Products</a>
-              <a href="#" class="menu menu--about">About us</a>
-              <a href="#" class="menu menu--blog">Blog</a>
-              <a href="#" class="menu menu--contact">
-                <img src="./images/icons/Icon-phone.png" alt="phone icon" class="menu--contactIcon">
-                Contact us
-              </a>
-            </div>
+          <div class="top-bar__menu">
+            <a
+              href="#products"
+              class="menu menu--products"
+            >
+              Products
+            </a>
+            <a
+              href="#about"
+              class="menu menu--about"
+            >
+              About us
+            </a>
+            <a
+              href="#"
+              class="menu menu--blog"
+            >
+              Blog
+            </a>
+            <a
+              href="#contact"
+              class="menu menu--contact"
+            >
+              <img
+                src="./images/icons/Icon-phone.png"
+                alt="phone icon"
+                class="menu--contactIcon"
+              />
+              Contact us
+            </a>
           </div>
+        </div>
+        <div class="header__bottom-wrapper">
           <div class="header__bottom">
             <div class="header__text">
-              We bake your fantasies — croissants,<br>cakes, cookies, and cupcakes.
+              We bake your fantasies — croissants,
+              <br />
+              cakes, cookies, and cupcakes.
             </div>
-            <div class="header__title">
-              Creative bakery
-            </div>
+            <div class="header__title">Creative bakery</div>
             <button class="header__button">
-              <img src="./images/icons/Icon-cookie.png" alt="icon cookie">
+              <img
+                src="./images/icons/Icon-cookie.png"
+                alt="icon cookie"
+              />
               Learn more
             </button>
           </div>
         </div>
       </div>
+      <!-- </div> -->
     </header>
 
     <main class="main">
       <div class="container">
         <div class="main__content">
-          <section class="products" id="products"></section>
-          <section class="about" id="about"></section>
-          <section class="blog" id="blog"></section>
+          <section
+            class="products"
+            id="products"
+          >
+            <h2 class="products__title">What we bake</h2>
+            <p class="products__text">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+
+            <div class="products__list">
+              <div class="products__row products__row--left">
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product1.png"
+                      alt="cake"
+                    />
+                  </div>
+                  <p class="card__title">Cakes</p>
+                  <p class="card__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <a
+                    href="#"
+                    class="card__order"
+                  >
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product2.png"
+                      alt="cake"
+                    />
+                  </div>
+                  <p class="card__title">Cakes</p>
+                  <p class="card__description">
+                    Chocolate biscuit coffee cake topped with a buttercream and
+                    powder
+                  </p>
+                  <a class="card__order">
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+              </div>
+
+              <div class="products__row products__row--right">
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product3.png"
+                      alt="donut"
+                    />
+                  </div>
+                  <p class="card__title">Donuts</p>
+                  <p class="card__description">
+                    Light multi-layered croissant strewn with cinammon and
+                    almond “petals”
+                  </p>
+                  <a class="card__order">
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product4.png"
+                      alt="donut"
+                    />
+                  </div>
+                  <p class="card__title">Donuts</p>
+                  <p class="card__description">
+                    Light multi-layered croissant strewn with coconut and nuts
+                  </p>
+                  <a class="card__order">
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+              </div>
+
+              <div class="products__row products__row--left">
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product5.png"
+                      alt="cake"
+                    />
+                  </div>
+                  <p class="card__title">Cakes</p>
+                  <p class="card__description">
+                    Cake with chocolate salted caramel, Vanilla frutti pebbles
+                    inside
+                  </p>
+                  <a class="card__order">
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+                <div class="products__card">
+                  <div class="card__top">
+                    <img
+                      src="./images/products/product6.png"
+                      alt="cookies"
+                    />
+                  </div>
+                  <p class="card__title">Cookies</p>
+                  <p class="card__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <a class="card__order">
+                    <img
+                      src="./images/icons/Icon-arrow.png"
+                      alt="arrow"
+                    />
+                    Order
+                  </a>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section
+            class="about"
+            id="about"
+          >
+            <div class="about__top">
+              <div class="about__top--title">Few words About us</div>
+              <div class="about__top--text">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </div>
+            </div>
+            <div class="about__bottom">
+              <div class="statistics">
+                <div class="statistics__number">2015</div>
+                <div class="statistics__content">Foundation year</div>
+              </div>
+              <div class="statistics">
+                <div class="statistics__number">23</div>
+                <div class="statistics__content">Stores</div>
+              </div>
+              <div class="statistics">
+                <div class="statistics__number">155</div>
+                <div class="statistics__content">Companies</div>
+              </div>
+              <div class="statistics">
+                <div class="statistics__number">10K+</div>
+                <div class="statistics__content">Clients</div>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="footer__inner">
+        <section class="nav">
+          <a
+            href="#"
+            class="nav__logo-link"
+          >
+            <img
+              src="./images/white_logo.png"
+              alt="Bakerlab logo"
+              class="nav__logo"
+            />
+          </a>
+          <div class="nav__menu">
+            <div class="nav__menu--title">Menu</div>
+            <ul class="nav__menu--list">
+              <li class="nav__menu--item">Products</li>
+              <li class="nav__menu--item">About us</li>
+              <li class="nav__menu--item">Blog</li>
+              <li class="nav__menu--item">Terms & Privacy</li>
+            </ul>
+          </div>
+          <div class="nav__social">
+            <a
+              href="#"
+              class="nav__social--link"
+            >
+              <img
+                src="./images/icons/Icon-facebook.png"
+                alt="facebook"
+                class="nav__social--icon"
+              />
+            </a>
+            <a
+              href="#"
+              class="nav__social--link"
+            >
+              <img
+                src="./images/icons/Icon-instagram.png"
+                alt="instagram"
+                class="nav__social--icon"
+              />
+            </a>
+            <a
+              href="#"
+              class="nav__social--link"
+            >
+              <img
+                src="./images/icons/Icon-twitter.png"
+                alt="twitter"
+                class="nav__social--icon"
+              />
+            </a>
+          </div>
+        </section>
+        <section class="contact" id="contact">
+          <p class="contact__title">Contact us</p>
+          <div class="contact__container">
+            <div class="contact__call">
+              <div class="contact__call--name">Call us</div>
+              <ul class="contact__call--list">
+                <li class="contact__call--phone">(629) 555-0129</li>
+                <li class="contact__call--phone">(603) 555-0123</li>
+                <li class="contact__call--phone">(704) 555-0127</li>
+              </ul>
+            </div>
+            <div class="contact__email">
+              <p class="contact__email--name">Email us</p>
+              <p class="contact__email--content">bakerlab@example.com</p>
+            </div>
+          </div>
+
+          <div class="content">© Bakerlab 2022</div>
+        </section>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
