--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      
+
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -443,7 +443,7 @@
             <li class="nav__item">
               <a
                 href="#about-us"
-                class="nav__link--footer"
+                class="nav__link nav__link--footer"
               >
                 About us
               </a>
@@ -451,15 +451,15 @@
             <li class="nav__item">
               <a
                 href="#blog"
-                class="nav__link--footer"
+                class="nav__link nav__link--footer"
               >
                 Blog
               </a>
             </li>
             <li class="nav__item">
               <a
-                href="#contact-us"
-                class="nav__link--footer"
+                href="#"
+                class="nav__link nav__link--footer"
               >
                 Terms & Privacy
               </a>
@@ -468,7 +468,7 @@
         </nav>
       </div>
 
-      <div class="footer__contact-us">
+      <div class="footer__contact-us" id="contact-us">
         <h1 class="footer__contact-us-title">Contact us</h1>
 
         <div class="footer__call-us">
