--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Bakerlabnpm</title>
+    <link
+      rel="icon"
+      href="/src/images/cookie-mini-orange.png"
+      type="image/x-icon"
+    />
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -21,7 +26,6 @@
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -468,7 +472,10 @@
         </nav>
       </div>
 
-      <div class="footer__contact-us" id="contact-us">
+      <div
+        class="footer__contact-us"
+        id="contact-us"
+      >
         <h1 class="footer__contact-us-title">Contact us</h1>
 
         <div class="footer__call-us">
@@ -518,7 +525,7 @@
         id="blog"
       >
         <a
-          href="#facebook"
+          href="https://www.facebook.com"
           class="footer__blog-link footer__blog-link-facebook"
         >
           <img
@@ -529,7 +536,7 @@
         </a>
 
         <a
-          href="#instagram"
+          href="https://www.instagram.com"
           class="footer__blog-link footer__blog-link-instagram"
         >
           <img
@@ -540,7 +547,7 @@
         </a>
 
         <a
-          href="#twitter"
+          href="https://twitter.com/"
           class="footer__blog-link footer__blog-link-twitter"
         >
           <img
